read parms from config, update service to python3

--- a/security-gate/receiver/receiver.ini
+++ b/security-gate/receiver/receiver.ini
@@ -2,5 +2,11 @@
 clientId = front-gate-controller
 awsEndpoint = a2mtj60ceepah6-ats.iot.us-east-1.amazonaws.com
 MQTTtopic = gate/control
+message = OPEN
+count = 0
+key = certs/private.pem.key
+cert = certs/device.pem.crt
+rootCA = certs/AmazonRootCA1.pem
 
+[raspberry-pi]
 GPIOGatePin = 17
