add service to Transmitter

--- a/security-gate/transmitter/transmitter.ini
+++ b/security-gate/transmitter/transmitter.ini
@@ -1,7 +1,10 @@
 [aws-iot-config]
-clientId = front-gate-app
+clientId = front-gate-button-1
 awsEndpoint = a2mtj60ceepah6-ats.iot.us-east-1.amazonaws.com
 MQTTtopic = gate/control
+key = certs/private.pem.key
+cert = certs/device.pem.crt
+rootCA = certs/AmazonRootCA1.pem
 
 [raspberry-pi]
 buttonPin = 15
