added temp sensor

--- a/chicken-coup/controller/controller.ini
+++ b/chicken-coup/controller/controller.ini
@@ -16,4 +16,6 @@ longitude = -81.701320
 
 [raspberry-pi]
 GPIOLightPin = 15
+GPIOTemperaturePin = 14
 nightLightDuration = 10
+temperatureThreshold = 50
