--- a/chicken-coup/controller/controller.ini
+++ b/chicken-coup/controller/controller.ini
@@ -17,5 +17,6 @@ longitude = -81.701320
 [raspberry-pi]
 GPIOLightPin = 15
 GPIOTemperaturePin = 14
-nightLightDuration = 10
+nightLightDuration = 7200
 temperatureThreshold = 50
+temperaturePollInterval = 600
