config test values

--- a/chicken-coup/controller/controller.ini
+++ b/chicken-coup/controller/controller.ini
@@ -17,6 +17,8 @@ longitude = -81.701320
 [raspberry-pi]
 GPIOLightPin = 15
 GPIOTemperaturePin = 14
-nightLightDuration = 10 # 7200
+nightLightDuration = 10 
+# nightLightDuration = 7200
 temperatureThreshold = 50
-temperaturePollInterval = 5 # 600
+temperaturePollInterval = 5 
+# temperaturePollInterval = 600
