--- a/chicken-coup/controller/controller.ini
+++ b/chicken-coup/controller/controller.ini
@@ -15,7 +15,7 @@ latitude = 26.663750
 longitude = -81.701320
 
 [raspberry-pi]
-senseHatLED = 0
+senseHatLED = False
 GPIOLightPin = 17
 GPIOTemperaturePin = 14
 nightLightDuration = 10 
