updates to GPIO and cron dusk scheduler

--- a/chicken-coup/controller/controller.ini
+++ b/chicken-coup/controller/controller.ini
@@ -18,8 +18,12 @@ longitude = -81.701320
 senseHatLED = False
 GPIOLightPin = 17
 GPIOTemperaturePin = 14
-nightLightDuration = 10 
-# nightLightDuration = 7200
+#nightLightDuration = 10 
+nightLightDuration = 9000
 temperatureThreshold = 50
 temperaturePollInterval = 5 
 # temperaturePollInterval = 600
+absolutePath = "/home/pi/dev/iot-home/chicken-coup/controller/"
+lightScript = "timer_light.py"
+duskScript = "dusk.py"
+cronScript = "picron"
