--- a/chicken-coup/controller/controller.ini
+++ b/chicken-coup/controller/controller.ini
@@ -25,5 +25,5 @@ temperaturePollInterval = 5
 # temperaturePollInterval = 600
 absolutePath = "/home/pi/dev/iot-home/chicken-coup/controller/"
 lightScript = "timer_light.py"
-duskScript = "dusk.py"
+duskScript = "duskSchedule.py"
 cronScript = "picron"
