no quotes in paths

--- a/chicken-coup/controller/controller.ini
+++ b/chicken-coup/controller/controller.ini
@@ -23,7 +23,7 @@ nightLightDuration = 9000
 temperatureThreshold = 50
 temperaturePollInterval = 5 
 # temperaturePollInterval = 600
-absolutePath = "/home/pi/dev/iot-home/chicken-coup/controller/"
-lightScript = "timer_light.py"
-duskScript = "duskSchedule.py"
-cronScript = "picron"
+absolutePath = /home/pi/dev/iot-home/chicken-coup/controller/
+lightScript = timer_light.py
+duskScript = duskSchedule.py
+cronScript = picron
