--- a/chicken-coup/controller/controller.ini
+++ b/chicken-coup/controller/controller.ini
@@ -1,13 +1,3 @@
-[aws-iot-config]
-clientId = chicken-coup-light-controller
-awsEndpoint = a2mtj60ceepah6-ats.iot.us-east-1.amazonaws.com
-MQTTtopic = chicken-coup-light/control
-message = ON
-count = 0
-key = certs/private.pem.key
-cert = certs/device.pem.crt
-rootCA = certs/AmazonRootCA1.pem
-
 [location-config]
 region = FL, USA
 timezone = America/New_York
@@ -15,15 +5,15 @@ latitude = 26.663750
 longitude = -81.701320
 
 [raspberry-pi]
-senseHatLED = False
-GPIOLightPin = 17
-GPIOTemperaturePin = 14
-#nightLightDuration = 10 
-nightLightDuration = 9000
-temperatureThreshold = 50
-temperaturePollInterval = 5 
-# temperaturePollInterval = 600
-absolutePath = /home/pi/dev/iot-home/chicken-coup/controller/
-lightScript = timer_light.py
-duskScript = duskSchedule.py
-cronScript = picron
+sense_hat_led = False
+gpio_light_pin = 17
+gpio_temperature_pin = 14
+#night_light_duration = 10 
+night_light_duration = 9000
+temperature_threshold = 50
+temperature_poll_interval = 5 
+#temperature_poll_interval = 600
+absolute_path = /home/pi/dev/iot-home/chicken-coup/controller/
+light_script = timer_light.py
+dusk_script = duskSchedule.py
+cron_script = picron
