--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip3 install awsiotsdk
+        pip3 install astral
+        pip3 install pytz
+        pip install RPi
     - name: Analysing the code with pylint
       run: |
         pylint $(find . -name "*.py" | xargs)
