--- a/chicken-coup/controller/controller.ini
+++ b/chicken-coup/controller/controller.ini
@@ -15,5 +15,5 @@ temperature_poll_interval = 5
 #temperature_poll_interval = 600
 absolute_path = /home/pi/dev/iot-home/chicken-coup/controller/
 light_script = timer_light.py
-dusk_script = duskSchedule.py
+dusk_script = dusk_schedule.py
 cron_script = picron
